Fixed: navbar is covered by WP adminbar when navbar is large

--- a/css/src/theme-menu-small.scss
+++ b/css/src/theme-menu-small.scss
@@ -1,6 +1,3 @@
-body.admin-bar .navbar {
-  top: 28px
-}
 .navbar-nav > li > a {
   padding-top: 18px !important;
   padding-bottom: 10px !important;
